First commited as after_46029_rev1

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2014 Shawn Pearce and others.
+# Copyright (c) 2005, 2015 Shawn Pearce and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -814,6 +814,7 @@ SpellCheckingMessageArea_selectAll=Select &All
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
 CommitMessageComponent_MessageInvalidCommitter=Invalid committer specified. Example: C O Mitter <committer@example.com>
 CommitMessageComponent_AmendingCommitInRemoteBranch=The commit being amended has already been published to a remote branch.
+CommitMessageComponent_MessageSecondLineNotEmpty=Second line should be empty
 CommitMessageEditorDialog_EditCommitMessageTitle=Interactive Rebase - Reword Commit
 CommitMessageViewer_author=Author
 CommitMessageViewer_child=Child
