First commited as after_46132_rev3

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -317,14 +317,22 @@ RebaseCurrentRefCommand_ErrorGettingCurrentBranchMessage=Error getting the branc
 RebaseInteractiveHandler_EditMessageDialogText=Edit the commit message. Lines starting with a \# are comments and will be ignored.
 RebaseInteractiveHandler_EditMessageDialogTitle=Edit Commit Message
 RebaseInteractiveStepActionToolBarProvider_SkipText=Skip
+RebaseInteractiveStepActionToolBarProvider_SkipDesc=Remove the commit from the history
 RebaseInteractiveStepActionToolBarProvider_EditText=Edit
+RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
+RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
 RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
+RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
 RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
+RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
+RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
 RebaseInteractiveStepActionToolBarProvider_RedoText=Redo
 RebaseInteractiveStepActionToolBarProvider_RewordText=Reword
+RebaseInteractiveStepActionToolBarProvider_RewordDesc=Pause before applying the commit, so\nthat the commit message can be changed
 RebaseInteractiveStepActionToolBarProvider_SquashText=Squash
+RebaseInteractiveStepActionToolBarProvider_SquashDesc=Combine the commit with the previous commit\nand allow the commit message to be edited
 RebaseInteractiveStepActionToolBarProvider_UndoText=Undo
 RebaseInteractiveView_HeadingStep=Step
 RebaseInteractiveView_HeadingAction=Action
