First commited as after_46144_rev1

--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -122,6 +122,8 @@ PushOperation_resultCancelled=Operation was cancelled.
 PushOperation_taskNameDryRun=Trying pushing to remote repositories
 PushOperation_taskNameNormalRun=Pushing to remote repositories
 
+RenameRemoteOperation_TaskName=Renaming remote {0} to {1}
+
 AddToIndexOperation_failed=Failed to add resource to index
 RemoveFromIndexOperation_removingFilesFromIndex=Removing files from index
 
