--- a/org.eclipse.egit.ui/plugin.properties
+++ b/org.eclipse.egit.ui/plugin.properties
@@ -221,6 +221,7 @@ RepoViewDeletePush.label = &Delete Push
 RepoViewCopyPath.label = &Copy Path to Clipboard
 RepoViewPastePath.label = Paste R&epository Path or URI
 RepoViewRenameBranch.label = Re&name Branch...
+RepoViewRenameRemote.label = Re&name Remote...
 AddToIndexCommand.name = Add to Index
 RemoveFromIndexCommand.name = Remove from Index
 BranchCommand.name = Branch
