--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1115,6 +1115,12 @@ MergeTargetSelectionDialog_MergeTypeCommitButton=&Commit (commit the result)
 MergeTargetSelectionDialog_MergeTypeNoCommitButton=N&o commit (prepare merge commit, but don't commit yet)
 MergeTargetSelectionDialog_MergeTypeSquashButton=&Squash (merge changes into working directory, but don't create merge commit)
 
+RemoteRenameDialog_Message=Please enter a new name for remote {0}
+RemoteRenameDialog_NewNameLabel=New Remote &name:
+RemoteRenameDialog_RenameExceptionMessage=Could not rename remote
+RemoteRenameDialog_Title=Rename Remote
+RemoteRenameDialog_WindowTitle=Rename Remote
+
 DecoratorPreferencesPage_addVariablesTitle=Add Variables
 DecoratorPreferencesPage_addVariablesAction=Add &Variables...
 DecoratorPreferencesPage_addVariablesAction2=Add Va&riables...
@@ -1664,6 +1670,7 @@ ValidationUtils_CanNotResolveRefMessage=Cannot resolve {0}
 ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
+ValidationUtils_RemoteAlreadyExistsMessage=Remote {0} already exists
 ValidationUtils_PleaseEnterNameMessage=Please enter a name
 
 GitMergeEditorInput_CalculatingDiffTaskName=Calculating Differences
