--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -317,14 +317,22 @@ RebaseCurrentRefCommand_ErrorGettingCurrentBranchMessage=Error getting the branc
 RebaseInteractiveHandler_EditMessageDialogText=Edit the commit message. Lines starting with a \# are comments and will be ignored.
 RebaseInteractiveHandler_EditMessageDialogTitle=Edit Commit Message
 RebaseInteractiveStepActionToolBarProvider_SkipText=Skip
+RebaseInteractiveStepActionToolBarProvider_SkipDesc=Remove the commit from the history
 RebaseInteractiveStepActionToolBarProvider_EditText=Edit
+RebaseInteractiveStepActionToolBarProvider_EditDesc=Pause before applying the commit, so\nthat new changes can be added
 RebaseInteractiveStepActionToolBarProvider_FixupText=Fixup
+RebaseInteractiveStepActionToolBarProvider_FixupDesc=Combine the commit with the previous commit,\nusing the previous commit's message
 RebaseInteractiveStepActionToolBarProvider_MoveDownText=Move down
+RebaseInteractiveStepActionToolBarProvider_MoveDownDesc=Move the commit down in the order of steps
 RebaseInteractiveStepActionToolBarProvider_MoveUpText=Move up
+RebaseInteractiveStepActionToolBarProvider_MoveUpDesc=Move the commit up in the order of steps
 RebaseInteractiveStepActionToolBarProvider_PickText=Pick
+RebaseInteractiveStepActionToolBarProvider_PickDesc=Apply the commit normally
 RebaseInteractiveStepActionToolBarProvider_RedoText=Redo
 RebaseInteractiveStepActionToolBarProvider_RewordText=Reword
+RebaseInteractiveStepActionToolBarProvider_RewordDesc=Pause before applying the commit, so\nthat the commit message can be changed
 RebaseInteractiveStepActionToolBarProvider_SquashText=Squash
+RebaseInteractiveStepActionToolBarProvider_SquashDesc=Combine the commit with the previous commit\nand allow the commit message to be edited
 RebaseInteractiveStepActionToolBarProvider_UndoText=Undo
 RebaseInteractiveView_HeadingStep=Step
 RebaseInteractiveView_HeadingAction=Action
@@ -1115,12 +1123,6 @@ MergeTargetSelectionDialog_MergeTypeCommitButton=&Commit (commit the result)
 MergeTargetSelectionDialog_MergeTypeNoCommitButton=N&o commit (prepare merge commit, but don't commit yet)
 MergeTargetSelectionDialog_MergeTypeSquashButton=&Squash (merge changes into working directory, but don't create merge commit)
 
-RemoteRenameDialog_Message=Please enter a new name for remote {0}
-RemoteRenameDialog_NewNameLabel=New Remote &name:
-RemoteRenameDialog_RenameExceptionMessage=Could not rename remote
-RemoteRenameDialog_Title=Rename Remote
-RemoteRenameDialog_WindowTitle=Rename Remote
-
 DecoratorPreferencesPage_addVariablesTitle=Add Variables
 DecoratorPreferencesPage_addVariablesAction=Add &Variables...
 DecoratorPreferencesPage_addVariablesAction2=Add Va&riables...
@@ -1670,8 +1672,6 @@ ValidationUtils_CanNotResolveRefMessage=Cannot resolve {0}
 ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
-ValidationUtils_InvalidRemoteNameMessage={0} is not a valid name for a remote
-ValidationUtils_RemoteAlreadyExistsMessage=Remote {0} already exists
 ValidationUtils_PleaseEnterNameMessage=Please enter a name
 
 GitMergeEditorInput_CalculatingDiffTaskName=Calculating Differences
