--- a/org.eclipse.egit.target/pom.xml
+++ b/org.eclipse.egit.target/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>3.7.1-SNAPSHOT</version>
+    <version>3.7.1.201504261725-r</version>
   </parent>
 
   <build>
