--- a/org.eclipse.egit.repository/pom.xml
+++ b/org.eclipse.egit.repository/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0.201505050340-m2</version>
   </parent>
 
   <artifactId>org.eclipse.egit.repository</artifactId>
@@ -76,7 +76,7 @@
       <plugin>
         <groupId>org.jboss.tools.tycho-plugins</groupId>
         <artifactId>repository-utils</artifactId>
-        <version>0.22.0</version>
+        <version>4.0.0.201505050340-m2</version>
         <executions>
           <execution>
             <id>generate-facade</id>
