--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <groupId>org.eclipse.egit</groupId>
   <artifactId>egit-parent</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
+  <version>4.0.0.201505050340-m2</version>
   <packaging>pom</packaging>
 
   <name>EGit Parent</name>
@@ -62,9 +62,10 @@
   </licenses>
 
   <properties>
-    <egit-version>4.0.0-SNAPSHOT</egit-version>
+    <egit-version>4.0.0.201505050340-m2</egit-version>
     <tycho-version>0.22.0</tycho-version>
     <tycho-extras-version>${tycho-version}</tycho-extras-version>
+    <jboss-tycho-plugins-version>${tycho-version}</jboss-tycho-plugins-version>
     <mockito-version>1.8.4</mockito-version>
     <junit-version>4.11</junit-version>
     <jgit-site>file:/${basedir}/../../jgit/org.eclipse.jgit.packaging/org.eclipse.jgit.repository/target/repository</jgit-site>
@@ -439,7 +440,11 @@
           <artifactId>tycho-pack200b-plugin</artifactId>
           <version>${tycho-extras-version}</version>
         </plugin>
-
+        <plugin>
+          <groupId>org.jboss.tools.tycho-plugins</groupId>
+          <artifactId>repository-utils</artifactId>
+          <version>${jboss-tycho-plugins-version}</version>
+        </plugin>
         <!-- other plugins -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
