First commited as before_48017_rev1

--- a/org.eclipse.egit.gitflow/build.properties
+++ b/org.eclipse.egit.gitflow/build.properties
@@ -2,5 +2,4 @@ source.. = src/
 bin.includes = META-INF/,\
                .,\
                build.properties,\
-               about.html,\
-               plugin.properties
+               about.html
