--- a/org.eclipse.egit.gitflow-feature/feature.properties
+++ b/org.eclipse.egit.gitflow-feature/feature.properties
@@ -6,8 +6,8 @@
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
 
-featureName=Eclipse Git Team Provider - Gitflow support
-providerName=Eclipse EGit
+featureName=Eclipse EGit GitFlow
+providerName=Eclipse EGit GitFlow
 
 updateSiteName=Eclipse EGit GitFlow Update Site
 
