--- a/org.eclipse.egit.ui.importer/pom.xml
+++ b/org.eclipse.egit.ui.importer/pom.xml
@@ -8,6 +8,7 @@
 		<artifactId>egit-parent</artifactId>
 	</parent>
 	<artifactId>org.eclipse.egit.ui.importer</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 
 	<name>Git Team Provider (experimental auto-import wizard, incubation)</name>
