--- a/org.eclipse.egit.target/pom.xml
+++ b/org.eclipse.egit.target/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0.201505191015-rc1</version>
   </parent>
 
   <build>
