--- a/org.eclipse.egit.ui.importer/pom.xml
+++ b/org.eclipse.egit.ui.importer/pom.xml
@@ -4,11 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.egit</groupId>
-		<version>4.0.0-SNAPSHOT</version>
+		<version>4.0.0.201505191015-rc1</version>
 		<artifactId>egit-parent</artifactId>
 	</parent>
 	<artifactId>org.eclipse.egit.ui.importer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 
 	<name>Git Team Provider (experimental auto-import wizard, incubation)</name>
