First commited as before_48302_rev2

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -664,7 +664,8 @@ ResetTargetSelectionDialog_SubjectLabel=Subject:
 ResetTargetSelectionDialog_UnresolvableExpressionError=Unresolvable expression
 ResetTargetSelectionDialog_WindowTitle=Reset
 ResourceHistory_MaxNumCommitsInList=Maximum number of commits to &show:
-ResourceHistory_ShowTagSequence=&Tag sequence
+ResourceHistory_ShowBranchSequence=&Branch Sequence
+ResourceHistory_ShowTagSequence=&Tag Sequence
 ResourceHistory_toggleRelativeDate=Relative &Dates
 ResourceHistory_toggleShowNotes=&Notes History
 ResourceHistory_toggleCommentWrap=&Wrap Comments
@@ -1225,7 +1226,6 @@ DialogsPreferencePage_DetachedHeadCombo=D&etached HEAD and checkout of remote-tr
 DialogsPreferencePage_HideConfirmationGroupHeader=Show confirmation dialogs
 DialogsPreferencePage_HideWarningGroupHeader=Log warnings
 DialogsPreferencePage_HomeDirWarning=&Home directory warning (Windows only)
-DialogsPreferencePage_GitPrefixWarning=&Git prefix warning (Windows typically)
 DialogsPreferencePage_RebaseCheckbox=&Rebase confirmation
 DialogsPreferencePage_RunningLaunchOnCheckout=Warn about running launches when switching branches
 DialogsPreferencePage_ShowInitialConfigCheckbox=&Initial configuration
@@ -1317,13 +1317,6 @@ GitSelectWizardPage_ImportAsGeneralButton=Import as &general project
 GitSelectWizardPage_ImportExistingButton=Import &existing Eclipse projects
 GitSelectWizardPage_ProjectCreationHeader=Wizard for project import
 GitSelectWizardPage_UseNewProjectsWizardButton=Import using the New &Project wizard
-ConfigurationChecker_gitPrefixWarningMessage=\
-Warning: EGit couldn't detect the installation path "gitPrefix" of native Git. Hence EGit can't respect system level\n\
-Git settings which might be configured in ${gitPrefix}/etc/gitconfig under the native Git installation directory.\n\
-The most important of these settings is core.autocrlf. Git for Windows by default sets this parameter to true in\n\
-this system level configuration. The Git installation location can be configured on the\n\
-Team > Git > Configuration preference page's 'System Settings' tab.\n\
-This warning can be switched off on the Team > Git > Confirmations and Warnings preference page.
 ConfigurationChecker_checkConfiguration=Check Configuration
 ConfigurationChecker_homeNotSet=\
 Warning: The environment variable HOME is not set. The following directory will be used to store the Git\n\
@@ -1331,8 +1324,6 @@ user global configuration and to define the default location to store repositori
 not correct please set the HOME environment variable and restart Eclipse. Otherwise Git for Windows and\n\
 EGit might behave differently since they see different configuration options.\n\
 This warning can be switched off on the Team > Git > Confirmations and Warnings preference page.
-ConfigurationEditorComponent_BrowseForPrefix=&Browse...
-ConfigurationEditorComponent_CannotChangeGitPrefixError=Cannot change Git prefix
 ConfigurationEditorComponent_ConfigLocationLabel=&Location:
 ConfigurationEditorComponent_EmptyStringNotAllowed=Empty string is not allowed
 ConfigurationEditorComponent_KeyColumnHeader=Key
@@ -1344,8 +1335,6 @@ ConfigurationEditorComponent_OpenEditorTooltip=Open a text editor for this confi
 ConfigurationEditorComponent_ReadOnlyLocationFormat={0} (non-writable)
 ConfigurationEditorComponent_RemoveButton=&Remove
 ConfigurationEditorComponent_RemoveTooltip=Removes the selected entry or all entries in the selected section or subsection
-ConfigurationEditorComponent_GitPrefixSelectionErrorMessage=This directory does not look like a Git installation directory.\nYou do not need this setting unless you have a system wide configuration file.
-ConfigurationEditorComponent_GitPrefixSelectionErrorTitle=Git Prefix Selection
 ConfigurationEditorComponent_RemoveSectionMessage=All entries in section ''{0}'' will be removed.\n\nDo you want to continue?
 ConfigurationEditorComponent_RemoveSectionTitle=Remove Section
 ConfigurationEditorComponent_RemoveSubsectionMessage=All entries in subsection ''{0}'' will be removed.\n\nDo you want to continue?
