First commited as before_48462_rev4

--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -664,7 +664,8 @@ ResetTargetSelectionDialog_SubjectLabel=Subject:
 ResetTargetSelectionDialog_UnresolvableExpressionError=Unresolvable expression
 ResetTargetSelectionDialog_WindowTitle=Reset
 ResourceHistory_MaxNumCommitsInList=Maximum number of commits to &show:
-ResourceHistory_ShowTagSequence=&Tag sequence
+ResourceHistory_ShowBranchSequence=&Branch Sequence
+ResourceHistory_ShowTagSequence=&Tag Sequence
 ResourceHistory_toggleRelativeDate=Relative &Dates
 ResourceHistory_toggleShowNotes=&Notes History
 ResourceHistory_toggleCommentWrap=&Wrap Comments
