--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -6,6 +6,7 @@
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 ###############################################################################
+DynamicHistoryMenu_startGitflowReleaseFrom=Start GitFlow release from {0}...
 FeatureFinishHandler_finishingFeature=Finishing feature...
 FeatureRebaseHandler_conflicts=Conflicts
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
