--- a/org.eclipse.egit.source-feature/pom.xml
+++ b/org.eclipse.egit.source-feature/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0.201506020755-rc3</version>
   </parent>
 
   <groupId>org.eclipse.egit.feature</groupId>
