--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -72,6 +72,7 @@ RepositoryUtil_DirectoryIsNotGitDirectory=Repository directory to configure does
 RepositoryUtil_noHead=NO-HEAD
 ResetOperation_performingReset=Performing {0} reset to {1}
 ResourceUtil_SaveLocalHistoryFailed=Saving local history of resource {0} failed
+ResourceUtil_mapProjectJob=Mapping Git provider to projects
 
 MergeOperation_InternalError=An internal error occurred
 MergeOperation_MergeFailedNoHead=Merge failed: Reference to HEAD does not exist
