--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,9 @@
 
   <properties>
     <egit-version>4.0.0-SNAPSHOT</egit-version>
-    <tycho-version>0.22.0</tycho-version>
+    <tycho-version>0.23.0</tycho-version>
     <tycho-extras-version>${tycho-version}</tycho-extras-version>
-    <jboss-tycho-plugins-version>${tycho-version}</jboss-tycho-plugins-version>
+    <jboss-tycho-plugins-version>0.22.0</jboss-tycho-plugins-version>
     <mockito-version>1.8.4</mockito-version>
     <junit-version>4.11</junit-version>
     <jgit-site>file:/${basedir}/../../jgit/org.eclipse.jgit.packaging/org.eclipse.jgit.repository/target/repository</jgit-site>
