--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1758,6 +1758,8 @@ StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
 StagingView_NoSelectionTitle=No Repository Selected
 StagingView_OpenNewCommits=Open New Commits
+StagingView_Column_Name=Name
+StagingView_Column_Modified=Modified
 StagingView_ColumnLayout=Column Layout
 StagingView_RebaseAbort=Abort
 StagingView_RebaseContinue=Continue
