--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -725,15 +725,15 @@ PushBranchPage_LocalBranchLabel=Branch:
 PushBranchPage_Source=Source:
 PushBranchPage_Destination=Destination:
 PushBranchPage_RemoteLabel=Remote:
-PushBranchPage_ChooseRemoteError=Please choose or add a remote.
+PushBranchPage_ChooseRemoteError=Select or add a remote.
 PushBranchPage_RemoteBranchNameLabel=Branch:
-PushBranchPage_ChooseBranchNameError=Please choose a name for the new branch.
-PushBranchPage_ForceUpdateButton=&Force overwrite of branch on remote if it exists and has diverged
+PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
+PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
 PushBranchPage_NewRemoteButton=&New Remote...
-PushBranchPage_PageMessage=Select a remote and the name the branch should have on the remote.
+PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
-PushBranchPage_PageTitle=Push to branch on remote
+PushBranchPage_PageTitle=Push to branch in remote
 PushBranchPage_UpstreamConfigOverwriteWarning=The existing upstream configuration for the branch will be overwritten.
 PushBranchPage_advancedWizardLink=Show <A>advanced push</A> dialog
 PushBranchPage_advancedWizardLinkTooltip=Will show an advanced, but more complex, dialog to configure the push operation. Compared to this one, the advanced \
@@ -1758,8 +1758,6 @@ StagingView_headCommitChanged=\# WARNING: head commit changed in the meantime
 StagingView_noStagedFiles=There are no staged files
 StagingView_NoSelectionTitle=No Repository Selected
 StagingView_OpenNewCommits=Open New Commits
-StagingView_Column_Name=Name
-StagingView_Column_Modified=Modified
 StagingView_ColumnLayout=Column Layout
 StagingView_RebaseAbort=Abort
 StagingView_RebaseContinue=Continue
