First commited as after_49800_rev1

--- a/org.eclipse.egit.core/plugin.properties
+++ b/org.eclipse.egit.core/plugin.properties
@@ -9,3 +9,5 @@
 plugin_name=Git Team Provider Core
 provider_name=Eclipse EGit
 patch_ContentTypeName=Patch File
+
+ModelMergeStrategy-point.name = Model Merge Strategy
