--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -10,6 +10,9 @@
 #    Daniel Megert <daniel_megert@ch.ibm.com> - Escaped single quotes where needed
 ###############################################################################
 
+Activator_invalidPreferredModelMergeStrategy=The configuration of the preferred merge strategy is invalid. It refers to a merge strategy called "{0}" which is not registered. The default recursive strategy will be used instead.
+Activator_missingPreferredModelMergeStrategy=The configuration of the preferred merge strategy is missing. The default recursive strategy will be used instead.
+
 CherryPickOperation_cherryPicking=Running cherry-pick on commit {0}
 CommitFileRevision_pathNotIn=Path {1} not in commit {0}.
 CommitFileRevision_errorLookingUpPath=IO error looking up path {1} in {0}.
