--- a/org.eclipse.egit.core/plugin.xml
+++ b/org.eclipse.egit.core/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="modelMergeStrategy" name="%ModelMergeStrategy-point.name" schema="schema/modelMergeStrategy.exsd"/>
    <extension point="org.eclipse.core.runtime.preferences">
       <initializer class="org.eclipse.egit.core.GitCorePreferenceInitializer"/>
    </extension>
