--- a/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
+++ b/org.eclipse.egit.core/src/org/eclipse/egit/core/internal/coretext.properties
@@ -10,6 +10,8 @@
 #    Daniel Megert <daniel_megert@ch.ibm.com> - Escaped single quotes where needed
 ###############################################################################
 
+Activator_invalidPreferredMergeStrategy=The configuration of the preferred merge strategy is invalid. It refers to a merge strategy called "{0}" which is not registered. The default recursive strategy will be used instead.
+
 CherryPickOperation_cherryPicking=Running cherry-pick on commit {0}
 CommitFileRevision_pathNotIn=Path {1} not in commit {0}.
 CommitFileRevision_errorLookingUpPath=IO error looking up path {1} in {0}.
@@ -167,3 +169,8 @@ GitRemoteFolder_fetchingMembers=Fetching members of {0}
 GitURI_InvalidSCMURL=Invalid SCM URL {0}
 GitURI_InvalidURI=Invalid uri {0}: {1}
 SquashCommitsOperation_squashing=Squashing {0} commits
+
+MergeStrategy_UnloadError=An error occurred while unregistering a model merge strategy
+MergeStrategy_LoadError=An error occurred while trying to instantiate a registered model merge strategy
+MergeStrategy_InvalidName=It's forbidden to register a merge strategy without a name. The strategy {0} will be ignored
+MergeStrategy_DuplicateName=Another merge strategy is already registered with the same name {0}. The strategy {1} will be ignored
