--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -242,6 +242,8 @@ GitPreferenceRoot_RepoChangeScannerGroupHeader=Automatic refresh
 GitPreferenceRoot_SecureStoreGroupLabel=Secure Store
 GitPreferenceRoot_SecureStoreUseByDefault=Store credentials in secure store by default
 GitPreferenceRoot_useLogicalModel=Allow models (e.g., Java, EMF) to participate in synchronizations
+GitPreferenceRoot_preferreMergeStrategy=Preferred merge strategy to use for operations that require merges
+GitPreferenceRoot_defaultMergeStrategyLabel=Default Strategy (as defined by JGit)
 GitProjectPropertyPage_LabelBranch=Branch:
 GitProjectPropertyPage_LabelGitDir=Git directory:
 GitProjectPropertyPage_LabelId=HEAD:
