--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -8,15 +8,13 @@
 ###############################################################################
 DynamicHistoryMenu_startGitflowReleaseFrom=Start release from commit {0}...
 FeatureFinishHandler_Conflicts=Conflicts
-FinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1}
-AbstractGitFlowHandler_finishConflicts=Finishing resulted in conflicts.
-AbstractGitFlowHandler_rebaseConflicts=Rebasing resulted in conflicts.
+FeatureFinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1}
+FeatureFinishHandler_featureFinishConflicts=Finishing feature resulted in conflicts.
 FeatureFinishHandler_finishingFeature=Finishing feature...
-FeatureRebaseHandler_problemsOccurred=Problems occurred
+FeatureRebaseHandler_conflicts=Conflicts
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
 FeatureRebaseHandler_rebasingFeature=Rebasing feature...
-FeatureRebaseHandler_problemsOcccurredDuringRebase=Problems occurred during rebase.
-FeatureRebaseHandler_statusWas=Rebase result status was ''{0}''.
+FeatureRebaseHandler_resolveConflictsManually=There are conflicts that need to be resolve manually. Add your changes and continue rebase when you are finished.
 FeatureStartHandler_pleaseProvideANameForTheNewFeature=Please provide a name for the new feature.
 FeatureStartHandler_provideFeatureName=Provide feature name
 FeatureStartHandler_startingNewFeature=Starting new Feature...
