First commited as before_50998_rev7

--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -12,6 +12,7 @@ FinishHandler_conflictsWhileMergingFromTo=Conflicts while merging from {0} to {1
 AbstractGitFlowHandler_finishConflicts=Finishing resulted in conflicts.
 AbstractGitFlowHandler_rebaseConflicts=Rebasing resulted in conflicts.
 FeatureFinishHandler_finishingFeature=Finishing feature...
+FeatureFinishHandler_rewordSquashedCommitMessage=Reword squashed commit message
 FeatureRebaseHandler_problemsOccurred=Problems occurred
 FeatureRebaseHandler_rebaseFailed=Rebase failed.
 FeatureRebaseHandler_rebasingFeature=Rebasing feature...
@@ -38,6 +39,7 @@ ReleaseFinishHandler_finishingRelease=Finishing release...
 ReleaseFinishHandler_releaseFinishConflicts=Finishing release resulted in conflicts.
 ReleaseStartHandler_provideANameForTheNewRelease=Please provide a name for the new release.
 ReleaseStartHandler_provideReleaseName=Provide release name
+ReleaseStartHandler_startCommitCouldNotBeDetermined=Start commit could not be determined.
 ReleaseStartHandler_startingNewRelease=Starting new Release...
 FeatureCheckoutHandler_checkingOutFeature=Checking out feature...
 FeatureCheckoutHandler_localFeatures=Local features:
@@ -49,5 +51,8 @@ NameValidator_invalidName='%s' is not a valid name. None of the following charac
 NameValidator_nameAlreadyExists=Name '%s' already exists
 FeatureCheckoutHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
 FeatureCheckoutHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
+FinishFeatureDialog_squashCheck=&Squash - produce a single commit from the changes in this feature
+FinishFeatureDialog_title=Feature finish options
+FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
 ReleaseFinishOperation_unexpectedConflictsReleaseAborted=Unexpected conflicts while merging to {0}. Finish release aborted.
 HotfixFinishOperation_unexpectedConflictsHotfixAborted=Unexpected conflicts while merging to {0}. Finish hotfix aborted.
